--- a/res/css/page.css
+++ b/res/css/page.css
@@ -15,3 +15,16 @@ button.m-btn-large-dim {
     font-size: 12px;
     vertical-align: top;
 }
+
+.test-exam-form test_exam {
+    
+}
+
+.test-exam-form test_exam info {
+    float: left;
+    color: red;
+}
+
+.test-exam-form test_exam te_code {
+    float: left;
+}
