refactor test-exam/index, search function add param validate when search in question/index

--- a/res/css/page.css
+++ b/res/css/page.css
@@ -11,7 +11,7 @@ button.m-btn-large-dim {
     padding-top: 22px;
 }
 
-.m-btn-large-text {
+span.m-btn-large-text {
     font-size: 12px;
     vertical-align: top;
 }
